--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 		<title>Jaggu Don</title>
 	</head>
 	<body>
-		<img src="1.jpg" >
-		<img src="2.jpg" >
-		<img src="3.jpg" >
-		<img src="4.jpg" >
-		<img src="5.jpg" >
-		<img src="6.jpg" >
-		<img src="7.jpg" >
-		<img src="8.jpg" >
-		<img src="9.jpg" >
-		<img src="10.jpg" >
-		<img src="11.jpg" >
-		<img src="12.jpg" >
-		<img src="13.jpg" >
+		<img src="1.jpg" height="200px" width="100px">
+		<img src="2.jpg" height="200px" width="100px">>
+		<img src="3.jpg" height="200px" width="100px">>
+		<img src="4.jpg" height="200px" width="100px">>
+		<img src="5.jpg" height="200px" width="100px">>
+		<img src="6.jpg" height="200px" width="100px">>
+		<img src="7.jpg" height="200px" width="100px">>
+		<img src="8.jpg" height="200px" width="100px">>
+		<img src="9.jpg" height="200px" width="100px">>
+		<img src="10.jpg" height="200px" width="100px">>
+		<img src="11.jpg" height="200px" width="100px">>
+		<img src="12.jpg" height="200px" width="100px">>
+		<img src="13.jpg" height="200px" width="100px">>
 	</body>
 </html>
