--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 		<title>Jaggu Don</title>
 	</head>
 	<body>
-		<img src="1.jpg" height="400px" width="200px"><br>
-		<img src="2.jpg" height="400px" width="200px"><br>
-		<img src="3.jpg" height="400px" width="200px"><br>
-		<img src="4.jpg" height="400px" width="200px"><br>
-		<img src="5.jpg" height="400px" width="200px"><br>
-		<img src="6.jpg" height="400px" width="200px"><br>
-		<img src="7.jpg" height="400px" width="200px"><br>
-		<img src="8.jpg" height="400px" width="200px"><br>
-		<img src="9.jpg" height="400px" width="200px"><br>
-		<img src="10.jpg" height="400px" width="200px"><br>
-		<img src="11.jpg" height="400px" width="200px"><br>
-		<img src="12.jpg" height="400px" width="200px"><br>
-		<img src="13.jpg" height="400px" width="200px"><br>
+		<h1>Aaiye. Cotton Bobby Dekhiye</h1>
+		<img src="1.jpg" height="400px" width="300px">
+		<img src="2.jpg" height="400px" width="300px">
+		<img src="3.jpg" height="400px" width="300px"><br>
+		<img src="4.jpg" height="400px" width="300px">
+		<img src="5.jpg" height="400px" width="300px">
+		<img src="6.jpg" height="400px" width="300px"><br>
+		<img src="7.jpg" height="400px" width="300px">
+		<img src="8.jpg" height="400px" width="300px">
+		<img src="9.jpg" height="400px" width="300px"><br>
+		<img src="10.jpg" height="400px" width="300px">
+		<img src="11.jpg" height="400px" width="300px">
+		<img src="12.jpg" height="400px" width="300px"><br>
+		<img src="13.jpg" height="450px" width="900px">
 	</body>
 </html>
